--- a/services/trustdidweb-server-py/charts/prod/Chart.yaml
+++ b/services/trustdidweb-server-py/charts/prod/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: tdw-server
-description: tdw-server - dev
+description: tdw-server - prod
 type: application
 version: 0.0.10
 appVersion: "0.1.1"
