--- a/services/trustdidweb-server-py/charts/test/Chart.yaml
+++ b/services/trustdidweb-server-py/charts/test/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
 name: tdw-server
-description: tdw-server - dev
+description: tdw-server - test
 type: application
-version: 0.0.9
-appVersion: "0.1.0"
+version: 0.0.10
+appVersion: "0.1.1"
 dependencies:
   - name: tdw-server
-    version: 0.0.9
+    version: 0.0.10
     repository: https://identity.foundation/trustdidweb-server-py
