Updated orgbook publisher values
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/services/orgbook-publisher/charts/dev/values.yaml
+++ b/services/orgbook-publisher/charts/dev/values.yaml
@@ -44,3 +44,6 @@ backend:
       enabled: true
       namespaceSelector:
         network.openshift.io/policy-group: ingress
+mongodb:
+  commonLabels:
+    backup: "true"
