--- a/services/orgbook-publisher/charts/prod/values.yaml
+++ b/services/orgbook-publisher/charts/prod/values.yaml
@@ -44,3 +44,6 @@ backend:
       enabled: true
       namespaceSelector:
         network.openshift.io/policy-group: ingress
+mongodb:
+  commonLabels:
+    backup: "true"
