--- a/openshift/templates/backup/config/test/backup.conf
+++ b/openshift/templates/backup/config/test/backup.conf
@@ -47,8 +47,8 @@
 # 0 4 * * * default ./backup.sh -s -v all
 # ============================================================
 # postgres=vc-authn-database/vc_authn
-postgres=wallet-lsbc/agent_lsbc_wallet
-postgres=wallet-buybc/agent_buybc_wallet
+# postgres=wallet-lsbc/agent_lsbc_wallet
+# postgres=wallet-buybc/agent_buybc_wallet
 # postgres=vc-authn-wallet/vc_authn_agent_rev_wallet
 # postgres=vc-authn-wallet/vc_authn_agent_wallet
 postgres=wallet-idim-qa/agent_idim_qa_wallet
