Update vc-authn repo urls
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/services/vc-authn-oidc/charts/dev/Chart.yaml
+++ b/services/vc-authn-oidc/charts/dev/Chart.yaml
@@ -7,4 +7,4 @@ appVersion: "2.2.1"
 dependencies:
   - name: vc-authn-oidc
     version: 0.2.4
-    repository: https://bcgov.github.io/vc-authn-oidc
+    repository: https://openwallet-foundation.github.io/acapy-vc-authn-oidc
