--- a/services/vc-authn-oidc/charts/prod/Chart.yaml
+++ b/services/vc-authn-oidc/charts/prod/Chart.yaml
@@ -7,4 +7,4 @@ appVersion: "2.2.2"
 dependencies:
   - name: vc-authn-oidc
     version: 0.2.5
-    repository: https://bcgov.github.io/vc-authn-oidc
+    repository: https://openwallet-foundation.github.io/acapy-vc-authn-oidc
