--- a/.github/workflows/deploy_vc_authn.yaml
+++ b/.github/workflows/deploy_vc_authn.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       ref:
-        description: 'Branch or SHA to deploy'
+        description: 'Branch or full SHA to deploy'
         required: false
         default: 'main'
 
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Checkout acapy-vc-authn-oidc
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           repository: openwallet-foundation/acapy-vc-authn-oidc
           fetch-depth: 0
