--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -1,7 +1,7 @@
 vc-authn-oidc:
   ingressSuffix: -dev.apps.silver.devops.gov.bc.ca
   image:
-    repository: ghcr.io/bcgov/vc-authn-oidc
+    repository: ghcr.io/openwallet-foundation/acapy-vc-authn-oidc
     pullPolicy: IfNotPresent
     tag: sha-23676cc
   acapyTenancyMode: single
