--- a/openshift/templates/backup/config/prod/backup.conf
+++ b/openshift/templates/backup/config/prod/backup.conf
@@ -47,12 +47,12 @@
 # 0 4 * * * default ./backup.sh -s -v all
 # ============================================================
 # postgres=vc-authn-database/vc_authn
-postgres=wallet-lsbc/agent_lsbc_wallet
-postgres=wallet-buybc/agent_buybc_wallet
+# postgres=wallet-lsbc/agent_lsbc_wallet
+# postgres=wallet-buybc/agent_buybc_wallet
 # postgres=vc-authn-wallet/vc_authn_agent_rev_wallet
 # postgres=vc-authn-wallet/vc_authn_agent_wallet
 postgres=wallet-idim/agent_idim_wallet
-postgres=wallet-lcrb/agent_lcrb_wallet
+# postgres=wallet-lcrb/agent_lcrb_wallet
 
 # Schedule backup for 1am PST; system TZ is PST
 0 1 * * * default ./backup.sh -s
