--- a/openshift/templates/backup/config/test/backup.conf
+++ b/openshift/templates/backup/config/test/backup.conf
@@ -52,7 +52,7 @@
 # postgres=vc-authn-wallet/vc_authn_agent_rev_wallet
 # postgres=vc-authn-wallet/vc_authn_agent_wallet
 postgres=wallet-idim-qa/agent_idim_qa_wallet
-postgres=wallet-lcrb/agent_lcrb_wallet
+# postgres=wallet-lcrb/agent_lcrb_wallet
 postgres=wallet-idim-preprod/agent_idim_preprod_wallet
 
 # Schedule backup for 1am PST; system TZ is PST
