Updated values files for vc-authn
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -1,19 +1,24 @@
 vc-authn-oidc:
   ingressSuffix: -dev.apps.silver.devops.gov.bc.ca
   image:
-    repository: ghcr.io/openwallet-foundation/acapy-vc-authn-oidc
+    repository: ghcr.io/bcgov/acapy-vc-authn-oidc
     pullPolicy: IfNotPresent
-    tag: sha-23676cc
+  
   acapyTenancyMode: single
   setNonRevoked: true
   invitationLabel: BC Gov SSO Service (Dev)
   useOobPresentProof: true
   useOobLocalDIDService: false
   useUrlDeepLink: true
-  controllerCameraRedirectUrl: wallet_howto
-  controllerPresentationExpireTime: 300
+  
+  controller:
+    cameraRedirectUrl: wallet_howto
+    presentationExpireTime: 300
+    templateDirectory: /app/templates
+  
   useHTTPS: true
   logLevel: INFO
+
   auth:
     api:
       existingSecret: "vc-authn-oidc-api-key"
