--- a/.github/actions/build_image.yaml
+++ b/.github/actions/build_image.yaml
@@ -21,6 +21,10 @@ inputs:
     required: true
     type: string
     default: ''
+  source_sha:
+    required: false
+    type: string
+    default: ''
   registry:
     required: true
     type: string
@@ -65,10 +69,8 @@ runs:
       with:
         images: ${{ inputs.registry }}/${{ inputs.image_name }}
         tags: |
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=ref,event=pr
-          type=sha
+          type=raw,value=${{ inputs.image_tag }}
+          type=raw,value=sha-${inputs.source_sha}
 
     - name: Build and push image
       id: builder
