Add build-args to action building image
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/.github/actions/build_image/action.yaml
+++ b/.github/actions/build_image/action.yaml
@@ -76,8 +76,8 @@ runs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-      env:
-        IMAGE_TAG: ${{ inputs.image_tag }}
+        build-args: |
+          IMAGE_TAG=${{ inputs.image_tag }}
 
     - id: values  
       shell: bash
