Updated vc-authn values
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/services/vc-authn-oidc/charts/prod/values.yaml
+++ b/services/vc-authn-oidc/charts/prod/values.yaml
@@ -116,6 +116,8 @@ vc-authn-oidc:
   mongodb:
     auth:
       existingSecret: "vc-authn-oidc-mongodb"
+    persistence:
+      storageClass: netapp-block-standard
     resources:
       limits:
         memory: 1000Mi
