--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -101,6 +101,8 @@ vc-authn-oidc:
   mongodb:
     auth:
       existingSecret: "vc-authn-oidc-mongodb"
+    persistence:
+      storageClass: netapp-block-standard
     resources:
       limits:
         memory: 1000Mi
