Update target image tag for dev deployment
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/.github/workflows/deploy_vc_authn.yaml
+++ b/.github/workflows/deploy_vc_authn.yaml
@@ -75,4 +75,4 @@ jobs:
         run: |
           cp services/vc-authn-oidc/charts/dev/values.yaml ./dev-values.yaml
           yq e -i 'del(.vc-authn-oidc) | . *= load("services/vc-authn-oidc/charts/dev/values.yaml").vc-authn-oidc' ./dev-values.yaml
-          helm upgrade --install vc-authn-oidc -f ./dev-values.yaml --set image.tag=sha-${{ needs.prepare.outputs.short-sha }} ./acapy-vc-authn-oidc/charts/vc-authn-oidc --wait
+          helm upgrade --install vc-authn-oidc -f ./dev-values.yaml --set image.tag=dev ./acapy-vc-authn-oidc/charts/vc-authn-oidc --wait
