Updated backup-container configurations
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/backup/backup-deploy.yaml
+++ b/openshift/templates/backup/backup-deploy.yaml
@@ -100,8 +100,7 @@ objects:
         description: Defines how to deploy the application server
         app.openshift.io/connects-to: >-
           [{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"${VC_AUTHN_DB_HOST}"},
-          {"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"${VC_AUTHN_WALLET_DB_HOST}"},
-          {"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"${LSBC_WALLET_DB_HOST}"}]
+          {"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"${VC_AUTHN_WALLET_DB_HOST}"}]
     spec:
       strategy:
         type: Recreate
@@ -178,26 +177,6 @@ objects:
                   valueFrom:
                     secretKeyRef:
                       name: ${PREFIX}${VC_AUTHN_WALLET_DB_HOST}
-                      key: ${DB_PASSWORD_KEY_NAME}
-                - name: WALLET_LSBC_USER
-                  valueFrom:
-                    secretKeyRef:
-                      name: ${PREFIX}${LSBC_WALLET_DB_HOST}
-                      key: ${DB_USER_KEY_NAME}
-                - name: WALLET_LSBC_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      name: ${PREFIX}${LSBC_WALLET_DB_HOST}
-                      key: ${DB_PASSWORD_KEY_NAME}
-                - name: WALLET_BUYBC_USER
-                  valueFrom:
-                    secretKeyRef:
-                      name: ${PREFIX}${BUY_BC_WALLET_DB_HOST}
-                      key: ${DB_USER_KEY_NAME}
-                - name: WALLET_BUYBC_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      name: ${PREFIX}${BUY_BC_WALLET_DB_HOST}
                       key: ${DB_PASSWORD_KEY_NAME}
                 - name: WALLET_IDIM_USER
                   valueFrom:
@@ -339,20 +318,6 @@ parameters:
       particular, this is used to wire up the credentials associated to the database.
     required: true
     value: vc-authn-wallet
-  - name: LSBC_WALLET_DB_HOST
-    displayName: Wallet Database Hostname
-    description:
-      The name associated to the wallet database deployment resources.  In
-      particular, this is used to wire up the credentials associated to the database.
-    required: true
-    value: wallet-lsbc
-  - name: BUY_BC_WALLET_DB_HOST
-    displayName: Wallet Database Hostname
-    description:
-      The name associated to the wallet database deployment resources.  In
-      particular, this is used to wire up the credentials associated to the database.
-    required: true
-    value: wallet-buybc
   - name: IDIM_WALLET_DB_HOST
     displayName: Wallet Database Hostname
     description:
