--- a/.github/workflows/build_deploy_vc_authn_dev.yaml
+++ b/.github/workflows/build_deploy_vc_authn_dev.yaml
@@ -53,7 +53,7 @@ jobs:
         with:
           repository: openwallet-foundation/acapy-vc-authn-oidc
           fetch-depth: 0
-          ref: ${{ github.event.inputs.ref }}
+          ref: main
           sparse-checkout: |
             charts
           path: acapy-vc-authn-oidc
