Remove old GHA, add triggers to updated one
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/.github/workflows/build_deploy_vc_authn_dev.yaml
+++ b/.github/workflows/build_deploy_vc_authn_dev.yaml
@@ -8,6 +8,12 @@ on:
         required: false
         default: 'main'
 
+  push:
+    branches:
+      - main
+    paths:
+      - "services/vc-authn-oidc/templates/**"
+
 jobs:
   prepare:
     name: Prepare job variables
