Update chart repos Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/services/redis/charts/redis/Chart.yaml
+++ b/services/redis/charts/redis/Chart.yaml
@@ -6,4 +6,4 @@ appVersion: 7.4.2
 dependencies:
   - name: redis
     version: 20.12.2
-    repository: oci://registry-1.docker.io/bitnamicharts/redis
+    repository: https://charts.bitnami.com/bitnami/
