--- a/services/redis/charts/redis-cluster/Chart.yaml
+++ b/services/redis/charts/redis-cluster/Chart.yaml
@@ -6,4 +6,4 @@ appVersion: 7.4.2
 dependencies:
   - name: redis-cluster
     version: 11.5.2
-    repository: oci://registry-1.docker.io/bitnamicharts/redis-cluster
+    repository: https://charts.bitnami.com/bitnami/
