--- a/services/traction/sandbox/values.yaml
+++ b/services/traction/sandbox/values.yaml
@@ -10,6 +10,7 @@ acapy:
   argfile.yml:
     tails-server-base-url: https://tails-dev.vonx.io
     tails-server-upload-url: https://tails-dev.vonx.io
+    wallet-type: askar-anoncreds
   ledgers.yml:
     - id: bcovrin-test
       is_production: true
